# pico_fightstick_microcontroller_rust

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
