[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
panic-halt= "0.2.0"
rp-pico = "0.4.0"
embedded-hal ="0.2.5"
cortex-m-rtic = "1.1.2"
cortex-m-rt = "0.7"
