[package]
name = "pico_fightstick_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
panic-halt= "0.2.0"
rp-pico = "0.5.0"
embedded-hal = "0.2.7"
critical-section = { version = "1.0" }
cortex-m-rt = "0.7"
usb-device= "0.2.9"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
